git push origin main

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <h3>Phone -</h3>
                 <h4>9096330034</h4><br>
                 <h3>Address -</h3>
-                <h4>Flat No-905 B4 Ganga Legend Socity Bavdhan Pune</h4>
+                <h4>Bavdhan Pune</h4>
             </div>
         </div>
     </section><br>
